--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,7 +4,7 @@
     font-family: 'Corinthia';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/corinthia-v11-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/corinthia-v11-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-100 - latin */
 @font-face {
@@ -12,7 +12,7 @@
     font-family: 'Noto Serif';
     font-style: normal;
     font-weight: 100;
-    src: url('/fonts/noto-serif-v23-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-100italic - latin */
 @font-face {
@@ -20,7 +20,7 @@
     font-family: 'Noto Serif';
     font-style: italic;
     font-weight: 100;
-    src: url('/fonts/noto-serif-v23-latin-100italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-100italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-200 - latin */
 @font-face {
@@ -28,7 +28,7 @@
     font-family: 'Noto Serif';
     font-style: normal;
     font-weight: 200;
-    src: url('/fonts/noto-serif-v23-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-200italic - latin */
 @font-face {
@@ -36,7 +36,7 @@
     font-family: 'Noto Serif';
     font-style: italic;
     font-weight: 200;
-    src: url('/fonts/noto-serif-v23-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-300 - latin */
 @font-face {
@@ -44,7 +44,7 @@
     font-family: 'Noto Serif';
     font-style: normal;
     font-weight: 300;
-    src: url('/fonts/noto-serif-v23-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-serif-300italic - latin */
 @font-face {
@@ -52,7 +52,7 @@
     font-family: 'Noto Serif';
     font-style: italic;
     font-weight: 300;
-    src: url('/fonts/noto-serif-v23-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-serif-v23-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* noto-sans-100 - latin */
@@ -61,7 +61,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 100;
-    src: url('/fonts/noto-sans-v38-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-100italic - latin */
 @font-face {
@@ -69,7 +69,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 100;
-    src: url('/fonts/noto-sans-v38-latin-100italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-100italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-200 - latin */
 @font-face {
@@ -77,7 +77,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 200;
-    src: url('/fonts/noto-sans-v38-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-200italic - latin */
 @font-face {
@@ -85,7 +85,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 200;
-    src: url('/fonts/noto-sans-v38-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-200italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-300 - latin */
 @font-face {
@@ -93,7 +93,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 300;
-    src: url('/fonts/noto-sans-v38-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-300italic - latin */
 @font-face {
@@ -101,7 +101,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 300;
-    src: url('/fonts/noto-sans-v38-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-regular - latin */
 @font-face {
@@ -109,7 +109,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('/fonts/noto-sans-v38-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-italic - latin */
 @font-face {
@@ -117,7 +117,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 400;
-    src: url('/fonts/noto-sans-v38-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-500 - latin */
 @font-face {
@@ -125,7 +125,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 500;
-    src: url('/fonts/noto-sans-v38-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-500italic - latin */
 @font-face {
@@ -133,7 +133,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 500;
-    src: url('/fonts/noto-sans-v38-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-700 - latin */
 @font-face {
@@ -141,7 +141,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 700;
-    src: url('/fonts/noto-sans-v38-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-700italic - latin */
 @font-face {
@@ -149,7 +149,7 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 700;
-    src: url('/fonts/noto-sans-v38-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-900 - latin */
 @font-face {
@@ -157,7 +157,7 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 900;
-    src: url('/fonts/noto-sans-v38-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* noto-sans-900italic - latin */
 @font-face {
@@ -165,5 +165,5 @@
     font-family: 'Noto Sans';
     font-style: italic;
     font-weight: 900;
-    src: url('/fonts/noto-sans-v38-latin-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('../fonts/noto-sans-v38-latin-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
